# citrine-python

./: .buildinfo  .gitignore  .pre-commit-config.yaml  .travis.yml  CODEOWNERS  CONTRIBUTING.md  LICENSE  Pipfile  README.md  citrine-api-key  client.py  data_entry.html  data_extraction.html  dev.ipynb  development.html  doc_requirements.txt  formulations_example.html  genindex.html  index.html  modules.html  molecular_generation.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  run_things.py  search.html  searchindex.js  setup.html  setup.py  test  test_filter_by_id.py  test_requirements.txt  tox.ini
.github/: CODEOWNERS  pull_request_template.md
FAQ/: index.html  prohibited_data_patterns.html  team_management_migration.html
_sources/: data_entry.rst.txt  data_extraction.rst.txt  formulations_example.rst.txt  index.rst.txt
_static/: alabaster.css  documentation_options.js
docs/: Makefile
getting_started/: ai_modules.html  basic_functionality.html  basic_structure.html  code_examples.html  connecting.html  data_model.html  datasets.html  index.html  overview.html  projects.html  projects_and_users.html  public_access.html  teams.html  working_with_files.html
live_tests/: test_data_manager_changes.py
reference/: citrine.ara.columns.html  citrine.ara.html  citrine.ara.rows.html  citrine.ara.variables.html  citrine.attributes.condition.html  citrine.attributes.html  citrine.attributes.parameter.html  citrine.attributes.property.html  citrine.attributes.property_and_conditions.html  citrine.builders.auto_configure.html  citrine.builders.descriptors.html  citrine.builders.design_spaces.html  citrine.builders.html  citrine.builders.predictors.html  citrine.builders.scores.html  citrine.citrine.html  citrine.exceptions.html  citrine.gemtables.columns.html  citrine.gemtables.html  citrine.gemtables.rows.html  citrine.gemtables.variables.html  citrine.html  citrine.informatics.analysis_configuration.html  citrine.informatics.catalyst.assistant.html  citrine.informatics.catalyst.html  (+134 more)
(+644 files in other folders)
