[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project]
name = "citrine"
version = "0.1.0"
description = "Python library for the Citrine Platform"
requires-python = ">=3.12"

dependencies = [
    "arrow",
    "boto3",
    "deprecation",
    "gemd",
    "requests",
    "tqdm",
    "urllib3",

]

[project.optional-dependencies]
test = [
    "mock",
    "pandas",
    "pre-commit",
    "pytest",
    "requests-mock",
    "ruff",
    "ty"
]