[project]
name = "citrine"
dynamic = ["version"]
dependencies = [
    "requests>=2.32.2,<3",
    "pyjwt>=2,<3",
    "arrow>=1.0.0,<2",
    "gemd>=2.1.9,<3",
    "boto3>=1.34.35,<2",
    "deprecation>=2.1.0,<3",
    "urllib3>=2.5.0,<3",
    "tqdm>=4.27.0,<5",
]
requires-python = ">=3.10"
authors = [
    {name = "Citrine Informatics"}
]
description = "Python library for the Citrine Platform"
readme = "README.md"
license-files = ["LICENSE"]
classifiers = [
          "Programming Language :: Python :: 3",
          "Programming Language :: Python :: 3.12",
          "Programming Language :: Python :: 3.13",
          "Programming Language :: Python :: 3.14",
]

[project.urls]
Homepage = "http://github.com/CitrineInformatics/citrine-python"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "citrine.__version__.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "flake8==7.0.0",
    "flake8-docstrings==1.7.0",
    "pandas==2.3.0",
    "pytest==8.4.2",
    "pytest-cov==7.0.0",
    "derp==0.1.1",
    "tomli>=2.2.1",
    "factory-boy==3.3.3",
    "mock==5.2.0",
    "requests-mock==1.12.1"
]
docs = [
    "sphinx==8.1.3",
    "sphinx-rtd-theme==3.1.0",
    "sphinxcontrib-apidoc==0.6.0",
]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

